--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 	</head>
 	<body onload="new Rubik()">
 		<h1>CSS 3D Rubik's cube</h1>
-		<footer>&copy; 2012 <a href="http://ondras.zarovi.cz/">Ondřej Žára</a></footer>
+		<footer>&copy; 2012 <a href="https://ondras.zarovi.cz/">Ondřej Žára</a>, source at <a href="https://github.com/ondras/rubik">GitHub</a></footer>
 	</body>
 </html>
